--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,44 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+header{
+  margin-bottom: 2rem;
+}
+
+ul{
+  list-style: none;
+}
+
+.container{
+  margin: 2rem auto;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text_style{
+  text-decoration: line-through;
+}
+
+.add_todo{
+  margin-bottom: 2rem;
+}
+
+.add_todo input,
+.add_todo button{
+  padding: 0.75rem;
+  border-radius: 0.5rem;
+  border: 1px solid lightgray;
+}
+
+.add_todo input{
+  margin-right: 1rem;
+}
+
+.list_todo{
+  background-color: lightgray;
+  border-radius: 0.75rem;
+  padding: 1.5rem;
+}
