--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,17 @@ ul{
   list-style: none;
 }
 
+ul>li{
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: 1px solid lightslategray;
+}
+
 .container{
   margin: 2rem auto;
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 400px;
+  text-align: center;
 }
 
 .text_style{
