--- a/versione-alternativa/assets/css/style.css
+++ b/versione-alternativa/assets/css/style.css
@@ -56,6 +56,7 @@ ul>li:last-child{
   border-radius: 0.75rem;
   padding: 1.5rem;
   display: flex;
+  justify-content: center;
 }
 
 .todo_delete,
@@ -66,6 +67,11 @@ ul>li:last-child{
   margin: 1rem;
   padding-top: 1rem;
   width: calc(100% / 3);
+}
+
+.todo_main input{
+  width: 75%;
+  border: none;
 }
 
 .cestino>h3{
