--- a/versione-alternativa/assets/css/style.css
+++ b/versione-alternativa/assets/css/style.css
@@ -4,86 +4,100 @@
   box-sizing: border-box;
 }
 
-header{
+body {
+  background-color: bisque;
+}
+
+header {
   margin-bottom: 2rem;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-ul>li{
+ul > li {
   display: flex;
   justify-content: space-between;
   padding: 1rem;
   border-bottom: 1px solid lightslategray;
 }
-ul>li:last-child{
+ul > li:last-child {
   border: none;
 }
 
-.text_style>i{
+.text_style > i {
   text-decoration: none;
 }
 
-.container{
+.container {
   margin: 2rem auto;
   width: 800px;
   text-align: center;
 }
 
-.text_style{
+.text_style {
   text-decoration: line-through;
 }
 
-.add_todo{
+.add_todo {
   margin-bottom: 2rem;
 }
 
 .add_todo input,
-.add_todo button{
+.add_todo button {
   padding: 0.75rem;
   border-radius: 0.5rem;
   border: 1px solid lightgray;
+  box-shadow: 0 0 10px gray;
 }
 
-.add_todo input{
+.add_todo input {
   margin-right: 1rem;
 }
 
-.list_todo{
-  background-color: lightgray;
+.list_todo {
+  background-color: rgb(137, 216, 218);
   border-radius: 0.75rem;
   padding: 1.5rem;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
 }
 
 .todo_delete,
 .todo_complete,
-.todo_main{
+.todo_main {
   background-color: white;
   border-radius: 0.5rem;
   margin: 1rem;
   padding-top: 1rem;
-  width: calc(100% / 3 - 2rem);
+  width: 100%;
 }
 
-.todo_main input{
+.todo_main > p {
+  margin-bottom: 1rem;
+}
+
+.todo_main input {
   width: 75%;
   border: none;
 }
 
-.cestino>h3{
+.cestino > h3 {
   display: inline-block;
 }
 
-.cestino>button{
+.cestino > button {
   background-color: transparent;
-  border:none
+  border: none;
 }
 
-.recupero{
-  width: 100%;
+.recupero {
+  margin-top: 1rem;
+}
+
+.recupero > a {
+  text-decoration: none;
+  color: #913636;
 }
